apps/sport-track/web/base/deployment-live-stitcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-stitcher
  namespace: sports-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-stitcher
  template:
    metadata:
      labels:
        app: live-stitcher
    spec:
      containers:
        - name: live-engine
          image: ghcr.io/agogos-llc/sport-track-stitch-v2:sha-5a32562
          imagePullPolicy: IfNotPresent
          command:
            - python
            - /app/post_stitcher.py
          args:
            - --left
            - $(LEFT_CAMERA_URL)
            - --right
            - $(RIGHT_CAMERA_URL)
            - --output
            - $(PREVIEW_RTSP_URL)
          volumeMounts:
            - mountPath: /var/recordings
              name: media-storage
              subPath: recordings
