apps/sport-track/web/base/migration-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-migrator
  namespace: sports-tracking
spec:
  restartPolicy: Never
  containers:
    - name: migrator
      image: busybox
      command: ["sh", "-c", "cp -av /old_media/. /new_media/"]
      volumeMounts:
        - name: old-vol
          mountPath: /old_media
        - name: new-vol
          mountPath: /new_media
  volumes:
    - name: old-vol
      persistentVolumeClaim:
        claimName: sports-media-pvc
    - name: new-vol
      persistentVolumeClaim:
        claimName: sports-media-pvc-rwx
