apps/sport-track/web/base/service-ai.yaml
apiVersion: v1
kind: Service
metadata:
  name: sport-track-service
  namespace: sports-tracking
spec:
  type: ClusterIP
  selector:
    app: sport-track
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
